[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/HUD/Win.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 461.855
margin_top = 328.371
margin_right = 581.855
margin_bottom = 372.371
rect_pivot_offset = Vector2( -448.98, -226.913 )
text = "Play Again!"

[node name="Label" type="Label" parent="."]
margin_left = 473.868
margin_top = 286.991
margin_right = 564.868
margin_bottom = 320.991
text = "YOU WIN!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 459.0
margin_top = 382.0
margin_right = 587.0
margin_bottom = 430.0
text = "EXIT"

[node name="Label2" type="Label" parent="."]
margin_left = 352.398
margin_top = 174.864
margin_right = 392.398
margin_bottom = 188.864
text = "TIME"

[node name="Label3" type="Label" parent="."]
margin_left = 347.058
margin_top = 192.217
margin_right = 387.058
margin_bottom = 206.217
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 635.383
margin_top = 172.194
margin_right = 676.383
margin_bottom = 186.194
text = "SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 638.053
margin_top = 189.547
margin_right = 678.053
margin_bottom = 203.547
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
